--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -1,5 +1,5 @@
 [[install-vm]]
-= Installing the virtual machine environment
+= Install SUSE Manager in a Virtual Machine Environment with JeOS
 
 
 
@@ -7,13 +7,7 @@
 == Virtual Machine Manager (virt-manager) Settings
 
 This chapter provides the required (KVM) settings for installation of {sle} Just Enough Operating System (JeOS) 15 as the base for {productname}.
-A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for your first installation.
-
-.{suse} Virtualization Guide
-[TIP]
-====
-For more information on virtualization, see: https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
-====
+A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for this installation.
 
 // This section needs revision its still ugly (LKB, KE), but now updated (KE)
 // - 2019-06-19.
@@ -29,20 +23,22 @@ In the following table replace _version_ with the actual product version string.
 | Version:            | SLES_version_-JeOS-for-kvm-and-xen.x86_64-GM.qcow2
 | Memory:             | 4096 MB
 | CPU's:              | 2
-| Storage Format:     |_.qcow2_ 24 GB (Default) JeOS Root Partition
+| Storage Format:     | _.qcow2_ 24 GB (Default) JeOS Root Partition
 | Virtual Disks:      |
 | VirtIO Disk 2       | 101 GB for [path]``/var/spacewalk``
 | VirtIO Disk 3       | 50 GB for [path]``/var/lib/pgsql``
 | VirtIO Disk 4       | 4 GB for swap
 | Name:               | test-setup
-| Network             |Bridge _br0_
+| Network             | Bridge _br0_
 |===
 
-.{suse} Virtualization Guide
-[TIP]
+.{sle} Virtualization Guide
+[NOTE]
 ====
-For more information on virtualization, see: https://www.suse.com/documentation/sles-12/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
+For more information on virtualization, see https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide].
 ====
+
+
 
 [[jeos.kvm.settings]]
 == JeOS KVM Settings
@@ -50,11 +46,19 @@ For more information on virtualization, see: https://www.suse.com/documentation/
 Create three additional virtual disks required for the {productname} storage partitions.
 
 .Procedure: Creating the Required Partitions with KVM
-. Create a new virtual machine using the downloaded JeOS KVM image and select menu:Import existing disk image[].
-. Configure RAM and number of CPUs (At least 4 GB RAM and 2 CPUs).
-. Name your KVM machine and select the menu:Customize configuration before install[] check box.
+. Create a new virtual machine using the downloaded JeOS KVM image and select [guimenu]``Import existing disk image``.
+. Configure RAM and number of CPUs (at least 4 GB RAM and 2 CPUs).
+. Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Select the btn:[Add Hardware] button and create three new virtual disks with the following specifications.
 These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
++
+
+[NOTE]
+====
+Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Especially [path]``/var/spacewalk/`` may quickly need more space.
+Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
+====
 +
 
 [cols="1,1,1", options="header"]
@@ -65,28 +69,24 @@ These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 | VirtIO Disk 4        | swap      | 4{nbsp}GB
 |===
 
-. Click menu:Begin Installation[] and your new VM will boot from the JeOS image.
+. Click btn:[Begin Installation] to boot the new VM from the JeOS image.
 
 Proceed through the basic JeOS installation prompts until you reach the command line.
 
-.Root Password
-[TIP]
-====
 During the basic installation prompts you are asked to enter the root password.
-Select a strong password and then in the next message box btn:[Confirm root Password].
-====
+In the next message box click btn:[Confirm root Password].
 
 
 
 [[jeos.susemgr.prep]]
-== Preparing JeOS for {productname}
+== Preparing JeOS for SUSE Manager
 
 [[proc.jeos.susemgr.prep]]
 .Procedure: Preparing JeOS for {productname} Installation
 
+// Most steps are currently needed because of 4.0 workarounds
 . Log in as `root`.
 
-// 4.0 workaround
 . Uninstall the `sles-release` package:
 +
 
@@ -113,7 +113,7 @@ SUSEConnect -p sle-module-web-scripting/15.1/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
-TIP: JeOS is configured to install only required packages.
+JeOS is configured to install only required packages.
 To get all features working you should allow to install also recommended packages.
 In `/etc/zypp/zypp.conf` change:
 +
@@ -138,6 +138,13 @@ zypper in -t package yast2-storage-ng
 ----
 . Partition and mount the virtual disks at the following locations using {yast} Partitioner ([command]``yast2 disk``).
 +
+
+[NOTE]
+====
+Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Especially [path]``/var/spacewalk/`` may quickly need more space.
+Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
+====
 
 [cols="1,1,1,1", options="header"]
 |===
