--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -58,7 +58,7 @@ image::proxy-bootstrap.png[]
 For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 . For Salt clients, accept the key on the menu:Salt[Keys] page by checking the appropriate checkbox.
 When accepted, it will appear in the menu:Systems[Overview].
-. Check via menu:System Details[Software > Software Channels] that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected.
+. Navigate to menu:System Details[Software > Software Channels], and check that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected.
 [systemitem]``SLE-PRODUCT-Pool`` must be the base channel and the others are child channels.
 +
 
