--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -6,13 +6,18 @@
 [[at.images.overview]]
 == Image Building Overview
 
-{productname} enables system administrators to build containers, systems, and virtual images.
-{productname} helps with creating image stores and managing image profiles.
+{productname} enables system administrators to build containers and OS Images and push the result in image stores.
+The process is clearly defined in the workflow:
+
+1. Define an image stores
+2. Define an image profile and associate it with a source (Git or a directory)
+3. Build the image
+4. Push the image in the image store
 
 {productname} supports two distinct build types:
 
-* Dockerfile{mdash}for more information, see <<at.images.docker>>
-* Kiwi image system{mdash}for more information, see <<at.images.kiwi>>
+* Dockerfile {mdash} for more information, see <<at.images.docker>>
+* Kiwi image system {mdash} for more information, see <<at.images.kiwi>>
 
 
 
@@ -30,12 +35,12 @@ image::image-building.png[scaledwidth=80%]
 The containers feature is available for Salt clients running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
-* An existing external GitHub or internal GitLab repository containing a dockerfile and configuration scripts (example scripts are provided in this chapter).
-* A properly configured image registry.
+* A published (public or private) Git repository (i.e. GitHub, GitLab or BitBucket) repository containing a Dockerfile and configuration scripts
+* A properly configured image store (i.e. Docker registry)
 +
 
 [NOTE]
-.Registry Provider Solutions
+.Image store Provider Solutions
 ====
 If you require a private image registry you can use an open source solution such as ``Portus``.
 For additional information on setting up Portus as a registry provider, see the http://port.us.org/[Portus Documentation].
@@ -45,22 +50,22 @@ For additional information on setting up Portus as a registry provider, see the 
 For more information on Containers or CaaS Platform, see:
 
 * https://www.suse.com/documentation/sles-15/book_sles_docker/data/book_sles_docker.html[SUSE Linux Enterprise Server Docker Guide]
-* https://www.suse.com/documentation/suse-caasp-3/[SUSE CaaS Platform 3 Documentation]
+* https://www.suse.com/documentation/suse-caasp-4/[SUSE CaaS Platform 4 Documentation]
 
 
 
 [[at.images.docker.buildhost]]
-=== Creating a Build Host
+=== Create a Build Host
 
 
-To build images with {productname}, you will need to create and configure a build host.
-Container build hosts are Salt clients running {sle} 12 or later.
-This section guides you through the initial configuration for a build host.
+To build images with {productname}, you will need to create and configure a Build Host.
+Container Build Hosts are Salt clients running {sle} 12 or later.
+This section guides you through the initial configuration for a Build Host.
 
-From the {productname} {webui}, perform these steps to configure a build host:
+From the {productname} {webui}, perform these steps to configure a Build Host:
 
 
-. Select a Salt client to be designated as a build host from the menu:Systems[Overview] page.
+. Select a Salt client to be designated as a Build Host from the menu:Systems[Overview] page.
 . From the [guimenu]``System Details`` page of the selected client assign the containers modules.
 Go to menu:Software[Software Channels] and enable the containers module (for example, [guimenu]``SLE-Module-Containers15-Pool`` and [guimenu]``SLE-Module-Containers15-Updates``).
 Confirm by clicking btn:[Change Subscriptions].
@@ -76,15 +81,15 @@ salt '$your_client' state.highstate
 
 
 [[at.images.docker.buildchannels]]
-==== Define Container Build Channels with an Activation Key
+=== Create an Activation Key for containers
 
 
-Create an activation key associated with the channel that your images will use.
+The containers built using {productname} will use channel(s) associated to the Activation Key as repositories when building the image. This section will guide you into creating an ad-hoc Activation Key for this purpose.
 
 [NOTE]
 .Relationship Between Activation Keys and Image Profiles
 ====
-To build containers, you will need an activation key that is associated with a channel other than `SUSE Manager Default`.
+To build a container, you will need an Activation Key that is associated with a channel other than `SUSE Manager Default`.
 ====
 
 image::systems_create_activation_key.png[scaledwidth=80%]
@@ -100,10 +105,10 @@ For more information, see <<bp.key.managment>>.
 
 
 [[at.images.docker.imagestore]]
-=== Creating an Image Store
+=== Create an Image Store
 
 
-Define a location to store all of your images by creating an image store.
+All built images will be pushed to an Image Store. This section will guide you in creating an Image Store for this purpose.
 
 image::images_image_stores.png[scaledwidth=80%]
 
@@ -113,7 +118,6 @@ image::images_image_stores.png[scaledwidth=80%]
 
 image::images_image_stores_create.png[scaledwidth=80%]
 
-. {productname} currently provides support only for the ``Registry`` store type.
 Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
 +
@@ -135,10 +139,10 @@ registry.example.com:5000/myregistry/myproject
 
 
 [[at.images.docker.profile]]
-=== Creating an Image Profile
+=== Create an Image Profile
 
 
-Manage image profiles from the [guimenu]``Image Profile`` page.
+All container image are built using an Image Profile: the profile contains the building instructions. This section will guide you into creating an image profile from the [guimenu]``Image Profile`` page.
 
 image::images_image_profiles.png[scaledwidth=80%]
 
@@ -157,56 +161,56 @@ Only lowercase characters are permitted in container labels.
 If your container image tag is in a format such as `myproject/myimage`, make sure your image store registry URI contains the `/myproject` suffix.
 ====
 
-. Use a dockerfile as the `Image Type`.
+. Use a Dockerfile as the `Image Type`.
 
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 
-. Enter a Github or Gitlab repository URL (http, https, or token authentication) in the [guimenu]``Path`` field using one of the following formats:
+. Enter a GitHub, GitLab or BitBucket repository URL (http, https, or token authentication) in the [guimenu]``Path`` field using one of the following formats:
 
-.Github Path Options
-* Github single user project repository
+.GitHub Path Options
+* GitHub single user project repository
 +
 ----
 https://github.com/USER/project.git#branchname:folder
 ----
 
-* Github organization project repository
+* GitHub organization project repository
 +
 ----
 https://github.com/ORG/project.git#branchname:folder
 ----
 
-* Github token authentication
+* GitHub token authentication
 +
 
-If your git repository is private and not publicly accessible, you need to modify the profile's git URL to include authentication.
-Use this URL format to authenticate with a Github token:
+If your Git repository is private and not publicly accessible, you need to modify the profile's Git URL to include authentication.
+Use this URL format to authenticate with a GitHub token:
 +
 
 ----
 https://USER:<AUTHENTICATION_TOKEN>@github.com/USER/project.git#master:/container/
 ----
 
-.Gitlab Path Options
-* Gitlab single user project repository
+.GitLab Path Options
+* GitLab single user project repository
 +
 
 ----
 https://gitlab.example.com/USER/project.git#master:/container/
 ----
 
-* Gitlab groups project repository
+* GitLab groups project repository
 +
 
 ----
 https://gitlab.example.com/GROUP/project.git#master:/container/
 ----
 
-* Gitlab token authentication
+* GitLab token authentication
 +
 
-If your git repository is private and not publicly accessible, you need to modify the profile's git URL to include authentication.
-Use this URL format to authenticate with a Gitlab token:
+If your Git repository is private and not publicly accessible, you need to modify the profile's Git URL to include authentication.
+Use this URL format to authenticate with a GitLab token:
 +
 
 ----
@@ -215,10 +219,10 @@ https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.g
 +
 
 [IMPORTANT]
-.Specifying a Github or Gitlab Branch
+.Specifying a Git branch
 ====
 If a branch is not specified, the `master` branch will be used by default.
-If a `folder` is not specified the image sources (dockerfile sources) are expected to be in the root directory of the Github or Gitlab checkout.
+If a `folder` is not specified the image sources (Dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
 ====
 
 . Select an `Activation Key`.
@@ -228,7 +232,7 @@ Activation Keys ensure that images using a profile are assigned to the correct c
 .Relationship Between Activation Keys and Image Profiles
 [NOTE]
 ====
-When you associate an activation key with an image profile you are ensuring any image using the profile will use the correct software channel and any packages in the channel.
+When you associate an Activation Key with an image profile you are ensuring any image using the profile will use the correct software channel and any packages in the channel.
 ====
 
 . Click the btn:[Create] button.
@@ -236,21 +240,28 @@ When you associate an activation key with an image profile you are ensuring any 
 
 
 [[at.images.docker.sourceexample]]
-=== Example Dockerfile and add_packages Script
+==== Example of Dockerfile sources
 
 
-This section contains an example dockerfile.
-You specify a dockerfile that will be used during image building when creating an image profile.
-A dockerfile and any associated scripts should be stored within an external or internal Github or Gitlab repository.
+An Image Profile that can be reused is published at https://github.com/SUSE/manager-build-profiles
 
-The dockerfile provides access to a specific repository version served by {productname}.
-The following example dockerfile is used by {productname} to trigger a build job on a build host.
+[NOTE]
+.Important instructions in the Dockerfile
+====
 The [option]``ARG`` parameters ensure that the built image is associated with the desired repository version served by {productname}.
-The [option]``ARG`` parameters also allow you to build image versions of {sls} which may differ from the version of {sls} used by the build host itself.
+The [option]``ARG`` parameters also allow you to build image versions of {sls} which may differ from the version of {sls} used by the Build Host itself.
 
 For example: The [comand]``ARG repo`` parameter and the [command]``echo`` command pointing to the repository file, creates and then injects the correct path into the repository file for the desired channel version.
 
-_The repository version is determined by the activation key that you assigned to your image profile._
+_The repository version is determined by the Activation Key that you assigned to your image profile._
+====
+
+[NOTE]
+.Packages Required for Inspecting Your Images
+====
+To inspect images and provide the package and product list of a container to the {productname} {webui} you must install [package]#python# and [package]#python-xml# within the container.
+Without these packages your images will still build, but the package and product list will be unavailable from the {webui}.
+====
 
 ----
 FROM registry.example.com/sles12sp2
@@ -282,28 +293,8 @@ RUN /root/add_packages.sh
 RUN rm -f /etc/zypp/repos.d/susemanager:dockerbuild.repo
 ----
 
-This is an example [path]``add_packages.sh`` script for use with your dockerfile:
-
-----
-#!/bin/bash
-set -e
-
-zypper --non-interactive --gpg-auto-import-keys ref
-
-zypper --non-interactive in python python-xml aaa_base aaa_base-extras net-tools timezone vim less sudo tar
-----
-
-[NOTE]
-.Packages Required for Inspecting Your Images
-====
-To inspect images and provide the package and product list of a container to the {productname} {webui} you must install [package]#python# and [package]#python-xml# within the container.
-Without these packages your images will still build, but the package and product list will be unavailable from the {webui}.
-====
-
-
-
 [[at.images.docker.building]]
-=== Building an Image
+=== Build an Image
 
 
 There are two ways to build an image.
@@ -329,7 +320,7 @@ When you have selected a build profile, detailed information about the selected 
 
 
 [[at.images.docker.importing]]
-=== Importing an Image
+=== Import an Image
 
 
 You can import and inspect arbitrary images.
@@ -352,10 +343,10 @@ Image version:::
 The version of the image in the registry.
 
 Build host:::
-The build host that will pull and inspect the image.
+The Build Host that will pull and inspect the image.
 
 Activation key:::
-The activation key that provides the path to the software channel that the image will be inspected with.
+The Activation Key that provides the path to the software channel that the image will be inspected with.
 
 . For confirmation, click btn:[Import].
 
@@ -373,10 +364,9 @@ The status icon for the imported image can also be seen on the ``Overview`` tab 
 
 These are some known problems when working with images:
 
-* HTTPS certificates to access the registry or the git repositories should be deployed to the client by a custom state file.
-* SSH git access using Docker is currently unsupported.
-You may test it, but SUSE will not provide support.
-* If the [package]#python# and [package]#python-xml# packages are not installed in your images during the build process, Salt cannot run within the container and reporting of installed packages or products will fail.
+* HTTPS certificates to access the registry or the Git repositories should be deployed to the client by a custom state file.
+* SSH Git access using Docker is currently unsupported.
+* If the [package]#python# and [package]#python-xml# packages are not installed in your images during the build process, reporting of installed packages or products will fail.
 This will result in an ``unknown`` update status.
 
 
@@ -384,8 +374,7 @@ This will result in an ``unknown`` update status.
 [[at.images.kiwi]]
 == OS Images
 
-OS images are built by the Kiwi image system.
-They can be of various types: PXE, QCOW2, LiveCD images, and others.
+OS Images are built by the Kiwi image system. The output image is customizable and can be: PXE, QCOW2, LiveCD images, and others.
 
 For more information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
 
@@ -394,25 +383,21 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 [[at.images.kiwi.requirements]]
 === Requirements
 
-// FIXME CHECKIT
 The Kiwi image building feature is available for Salt clients running {sls}{nbsp}12.
-It is currently not supported to build {sle} 15 images.
-// FIXME CHECKIT
-Building {sle} 15 images requires a {sle} 15 based build host.
+Starting from {sls}{nbsp}15, kiwi-ng will be used instead of the legacy Kiwi.
 
 Kiwi image configuration files and configuration scripts must be accessible in one of these locations:
 
 * Git repository
 * HTTP hosted tarball
-* Local build host directory
+* Local Build Host directory
 
-// FIXME: Provide better reference
-Example scripts are provided in <<at.images.kiwi.sourceexample>>.
+An example of a complete Kiwi repo served by Git can be found at https://github.com/SUSE/manager-build-profiles/tree/master/OSImage
 
 [NOTE]
 .Hardware Requirements for Hosts Running OS Images
 ====
-Hosts running OS images built with Kiwi need at least 1 GB of RAM.
+Hosts running OS Images built with Kiwi need at least 1 GB of RAM.
 Disk space depends on the actual size of the image.
 For more information, see the documentation of the underlying system.
 ====
@@ -420,16 +405,16 @@ For more information, see the documentation of the underlying system.
 
 
 [[at.images.kiwi.buildhost]]
-=== Creating a Build Host
+=== Create a Build Host
 
 
-To build all kinds of images with {productname}, create and configure a build host.
-OS image build hosts are Salt clients running {sls}{nbsp}12 (SP3 or later) or 15.
-This procedure will guide you through the initial configuration for a build host.
+To build all kinds of images with {productname}, create and configure a Build Host.
+OS Image Build Hosts are Salt clients running {sls}{nbsp}12 (SP3 or later) or 15.
+This procedure will guide you through the initial configuration for a Build Host.
 
-From the {productname} {webui}, perform these steps to configure a build host:
+From the {productname} {webui}, perform these steps to configure a Build Host:
 
-. Select a client that will be designated as a build host from the menu:Systems[Overview] page.
+. Select a client that will be designated as a Build Host from the menu:Systems[Overview] page.
 . From the menu:System Details[Properties] page, enable the [guimenu]``Add-on System Type:`` [guimenu]``OS Image Build Host`` and confirm with btn:[Update Properties].
 +
 image::os-image-build-host.png[scaledwidth=80%]
@@ -444,15 +429,8 @@ Alternatively, apply Highstate from the {productname} Server command line:
 salt '$your_client' state.highstate
 ----
 
-// FIXME: shall we also mention: ?
-//. Prepare build subdirectories in the build host for OS image building (in /var/lib/Kiwi)
-//. Copy SUSE Manager's CA certificate onto the OS image build host
-//. Install openSSH and configure passwordless login (via SSH keys) for the salt user into the OS image build host
-
-
-
 .{productname} Web Server Public Certificate RPM
-Build host provisioning copies the {productname} certificate RPM to the build host.
+Build Host provisioning copies the {productname} certificate RPM to the Build Host.
 This certificate is used for accessing repositories provided by {productname}.
 
 The certificate is packaged in RPM by the `mgr-package-rpm-certificate-osimage` package script.
@@ -470,7 +448,7 @@ However if the certificate path was changed or unavailable, you will need to cal
 
 The RPM package with the certificate is stored in a salt-accessible directory such as `/usr/share/susemanager/salt/images/rhn-org-trusted-ssl-cert-osimage-1.0-1.noarch.rpm`.
 
-The RPM package with the certificate is provided in the local build host repository `/var/lib/Kiwi/repo`.
+The RPM package with the certificate is provided in the local Build Host repository `/var/lib/Kiwi/repo`.
 
 
 [IMPORTANT]
@@ -493,16 +471,16 @@ Make sure your build source Kiwi configuration contains `rhn-org-trusted-ssl-cer
 
 
 [[at.images.kiwi.buildchannels]]
-==== Define Kiwi Build Channels with an Activation Key
+=== Create an Activation Key for OS Images
 
+Create an Activation Key associated with the channel that your OS Images will use as repositories when building the image.
 
-Create an activation key associated with the channel that your images will use.
-Activation keys are mandatory for OS image building.
+Activation keys are mandatory for OS Image building.
 
 [NOTE]
 .Relationship Between Activation Keys and Image Profiles
 ====
-To build OS images, you will need an activation key that is associated with a channel other than `SUSE Manager Default`.
+To build OS Images, you will need an Activation Key that is associated with a channel other than `SUSE Manager Default`.
 ====
 
 image::systems_create_activation_key.png[scaledwidth=80%]
@@ -517,11 +495,11 @@ For more information, see <<bp.key.managment>>.
 
 
 [[at.images.kiwi.imagestore]]
-=== Image Store
+=== Create an Image Store
 
 
-OS images can require  a significant amount of storage space.
-Therefore, we recommended that the OS image store is located on a partition of its own or on a Btrfs subvolume, separate from the root partition.
+OS Images can require a significant amount of storage space.
+Therefore, we recommended that the OS Image store is located on a partition of its own or on a Btrfs subvolume, separate from the root partition.
 By default, the image store will be located at [path]``/srv/www/os-images``.
 
 [NOTE]
@@ -535,7 +513,7 @@ Images are always stored in [path]``/srv/www/os-images/<organization id>`` and a
 
 
 [[at.images.kiwi.profile]]
-=== Creating an Image Profile
+=== Create an Image Profile
 
 
 Manage image profiles using the {webui}.
@@ -554,7 +532,7 @@ image::images_image_create_profile_kiwi.png[scaledwidth=80%]
 . Enter a [guimenu]``Config URL`` to the directory containing the Kiwi configuration files:
 .. Git URI
 .. HTTPS tarball
-.. Path to build host local directory
+.. Path to Build Host local directory
 . Select an [guimenu]``Activation Key``.
 Activation keys ensure that images using a profile are assigned to the correct channel and packages.
 +
@@ -562,7 +540,7 @@ Activation keys ensure that images using a profile are assigned to the correct c
 [NOTE]
 .Relationship Between Activation Keys and Image Profiles
 ====
-When you associate an activation key with an image profile you are ensuring any image using the profile will use the correct software channel and any packages in the channel.
+When you associate an Activation Key with an image profile you are ensuring any image using the profile will use the correct software channel and any packages in the channel.
 ====
 +
 
@@ -605,11 +583,11 @@ URL to the tar archive, compressed or uncompressed, hosted on the webserver.
 https://myimagesourceserver.example.org/MyKiwiImage.tar.gz
 ----
 
-** Path to the directory on the build host
+** Path to the directory on the Build Host
 +
 
 Enter the path to the directory with the Kiwi build system sources.
-This directory must be present on the selected build host.
+This directory must be present on the selected Build Host.
 +
 
 ----
@@ -619,7 +597,7 @@ This directory must be present on the selected build host.
 
 
 [[at.images.kiwi.sourceexample]]
-=== Example of Kiwi Sources
+==== Example of Kiwi Sources
 
 
 Kiwi sources consist at least of `config.xml`.
@@ -687,7 +665,7 @@ For information about the Kiwi build system, see the https://doc.opensuse.org/pr
 
 
 [[at.images.kiwi.building]]
-=== Building an Image
+=== Build an Image
 // ianew: admin/image-management.adoc
 // iawho: lana 2019-02-27
 
@@ -715,8 +693,6 @@ When you have selected a build profile, detailed information about the selected 
 
 
 [[at.images.kiwi.inspection]]
-=== Image Inspection and Salt Integration
-
 
 After the image is successfully built, the inspection phase begins.
 During the inspection phase {susemgr} collects information about the image:
@@ -744,9 +720,9 @@ Building an image requires of several dependent steps.
 When the build fails, investigation of Salt states results can help you to identify the source of the failure.
 Usual checks when the build fails:
 
-* The build host can access the build sources
-* There is enough disk space for the image on both the build host and the {productname} server
-* The activation key has the correct channels associated with it
+* The Build Host can access the build sources
+* There is enough disk space for the image on both the Build Host and the {productname} server
+* The Activation Key has the correct channels associated with it
 * The build sources used are valid
 * The RPM package with the {productname} public certificate is up to date and available at `/usr/share/susemanager/salt/images/rhn-org-trusted-ssl-cert-osimage-1.0-1.noarch.rpm`.
 For more on how to refresh a public certificate RPM, see <<at.images.kiwi.buildhost>>.
@@ -764,7 +740,7 @@ The section contains some known issues when working with images.
 
 
 [[at.images.listing]]
-== Listing Image Profiles Available for Building
+== List Image Profiles Available for Building
 
 
 To list images available for building select menu:Images[Image List].
