--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -11,10 +11,10 @@ The [command]``spacewalk-report`` command allows you to organize and display rep
 
 You can generate reports on:
 
-. System Inventory: lists all of the systems registered to {productname}.
-. Entitlements: lists all organizations on {productname}, sorted by system or channel entitlements.
-. Patches: lists all the patches relevant to the registered systems and sorts patches by severity, as well as the systems that apply to a particular patch.
-. Users: lists all the users registered to {productname} and any systems associated with a particular user.
+. System Inventory: list all the systems registered to {productname}.
+. Entitlements: list all organizations, sorted by system or channel entitlements.
+. Patches: list all the patches relevant to the registered systems and sorts patches by severity, as well as the systems that apply to a particular patch.
+. Users: list all registered users and any systems associated with a particular user.
 
 To get the report in CSV format, run this command at the command prompt on the server:
 
@@ -30,31 +30,31 @@ This table lists the available reports:
 [cols="1,1,1", options="header"]
 |===
 |Report | Invoked as | Description
-| Channel Packages | [command]``channel-packages`` | List of packages in a channel.
+| Channel Packages | [command]``channel-packages`` | All packages in a channel.
 | Channel Report | [command]``channels`` | Detailed report of a given channel.
 | Cloned Channel Report | [command]``cloned-channels`` | Detailed report of cloned channels.
 | Custom Info | [command]``custom-info`` | System custom information.
-| Entitlements | [command]``entitlements`` | Lists all organizations on {productname} with their system or channel entitlements.
-| Patches in Channels | [command]``errata-channels`` | Lists of patches in channels.
-| Patches Details | [command]``errata-list`` | Lists all patches that affect systems registered to {productname}.
-| All patches | [command]``errata-list-all`` | Complete list of all patches.
-| Patches for Systems | [command]``errata-systems`` | Lists applicable patches and any registered systems that are affected.
-| Host Guests | [command]``host-guests`` | List of host-guests mapping.
-| Inactive Systems | [command]``inactive-systems`` | List of inactive systems.
-| System Inventory | [command]``inventory`` | List of systems registered to the server, together with hardware and software information.
-| Kickstart Trees | [command]``kickstartable-trees`` | List of kickstartable trees.
-| All Upgradable Versions | [command]``packages-updates-all`` | List of all newer package versions that can be upgraded.
-| Newest Upgradable Version | [command]``packages-updates-newest`` | List of only newest package versions that can be upgraded.
+| Entitlements | [command]``entitlements`` | All organizations, and their system or channel entitlements.
+| Patches in Channels | [command]``errata-channels`` | All patches in channels.
+| Patches Details | [command]``errata-list`` | All patches that affect registered systems.
+| All patches | [command]``errata-list-all`` | All patches.
+| Patches for Systems | [command]``errata-systems`` | Applicable patches and any registered systems that are affected.
+| Host Guests | [command]``host-guests`` | Host and guests mapping.
+| Inactive Systems | [command]``inactive-systems`` | Inactive systems.
+| System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
+| Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
+| All Upgradable Versions | [command]``packages-updates-all`` | All newer package versions that can be upgraded.
+| Newest Upgradable Version | [command]``packages-updates-newest`` | Newest package versions that can be upgraded.
 | Result of SCAP | [command]``scap-scan`` | Result of OpenSCAP ``sccdf`` evaluations.
 | Result of SCAP | [command]``scap-scan-results`` | Result of OpenSCAP ``sccdf`` evaluations, in a different format.
 | System Data | [command]``splice-export`` | System data needed for splice integration.
-| System Groups | [command]``system-groups`` | List of system groups.
-| Activation Keys for System Groups | [command]``system-groups-keys`` | List of activation keys for system groups.
-| Systems in System Groups | [command]``system-groups-systems`` | List of systems in system groups.
+| System Groups | [command]``system-groups`` | System groups.
+| Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
+| Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
 | System Groups Users | [command]``system-groups-users`` | Report of system groups users.
-| Installed Packages | [command]``system-packages-installed`` | List of packages installed on systems.
-| Users in the System | [command]``users`` | Lists all users registered to {productname}.
-| Systems administered | [command]``users-systems`` | List of systems that individual users can administer.
+| Installed Packages | [command]``system-packages-installed`` | Packages installed on systems.
+| Users in the System | [command]``users`` | All users registered to {productname}.
+| Systems administered | [command]``users-systems`` | Systems that individual users can administer.
 |===
 
 For more information about an individual report, run [command]``spacewalk-report`` with the option [option]``--info`` or [option]``--list-fields-info`` and the report name.
